--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -2,7 +2,7 @@
 ;设置规则标志位
 ruleset=🎯 全球直连,https://gitee.com/cai-shaofeng/split-rule-backup/raw/master/Direct.list
 ruleset=🚀 节点选择,https://gitee.com/cai-shaofeng/split-rule-backup/raw/master/ProxyLite.list
-ruleset=🤖 AI,https://gitee.com/cai-shaofeng/split-rule-backup/raw/master/AI.list
+ruleset=🤖 AI,https://raw.githubusercontent.com/Rynderack/My-OpenCalsh-rules/refs/heads/main/AI.list?token=GHSAT0AAAAAAC5BRPJ4K466CV6WACOGQDZEZ44ILSA
 
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
