--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -1,6 +1,6 @@
 [custom]
 ;设置规则标志位
-ruleset=🎯 全球直连,https://gitee.com/cai-shaofeng/split-rule-backup/raw/master/Direct.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/Rynderack/My-OpenCalsh-rules/refs/heads/main/Direct.list?token=GHSAT0AAAAAAC5BRPJ5M3H3R2LQOPC437X2Z44IMHA
 ruleset=🚀 节点选择,https://gitee.com/cai-shaofeng/split-rule-backup/raw/master/ProxyLite.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/Rynderack/My-OpenCalsh-rules/refs/heads/main/AI.list?token=GHSAT0AAAAAAC5BRPJ4K466CV6WACOGQDZEZ44ILSA
 
