--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -1,7 +1,7 @@
 [custom]
 ;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Rynderack/My-OpenCalsh-rules/refs/heads/main/Direct.list?token=GHSAT0AAAAAAC5BRPJ5M3H3R2LQOPC437X2Z44IMHA
-ruleset=🚀 节点选择,https://gitee.com/cai-shaofeng/split-rule-backup/raw/master/ProxyLite.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/Rynderack/My-OpenCalsh-rules/refs/heads/main/ProxyLite.list?token=GHSAT0AAAAAAC5BRPJ57B5YDRS6X676FPY6Z44INDA
 ruleset=🤖 AI,https://raw.githubusercontent.com/Rynderack/My-OpenCalsh-rules/refs/heads/main/AI.list?token=GHSAT0AAAAAAC5BRPJ4K466CV6WACOGQDZEZ44ILSA
 
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
