删掉了美国自动代理组的国旗emoji

--- a/ACL4SSR_Online_Full_2.ini
+++ b/ACL4SSR_Online_Full_2.ini
@@ -74,7 +74,7 @@ custom_proxy_group=♻️ 香港自动`url-test`(香港|HK|Hong Kong|🇭🇰|Ho
 custom_proxy_group=♻️ 台湾自动`url-test`(台湾|台灣|TW|Tai Wan|🇹🇼|TaiWan|Taiwan)`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=♻️ 日本自动`url-test`(日本|🇯🇵|Japan)`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=♻️ 新加坡自动`url-test`(新加坡|SG|坡|🇸🇬|Singapore)`http://www.gstatic.com/generate_204`60,150
-custom_proxy_group=♻️ 美国自动`url-test`(美国|US|🇺🇸|United States)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=♻️ 美国自动`url-test`(美国|US|United States)`http://www.gstatic.com/generate_204`60,150
 ;设置分组标志位
 
 enable_rule_generator=true
