--- a/ACL4SSR_Online_Full_1.ini
+++ b/ACL4SSR_Online_Full_1.ini
@@ -17,6 +17,7 @@ ruleset=🍎 苹果,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=📲 电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=📚 多邻国,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/duolingo.list
 ruleset=🏦 PayPal,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PayPal/PayPal.yaml
+ruleset=🏫 国外学术,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalScholar/GlobalScholar.yaml
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
@@ -55,6 +56,7 @@ custom_proxy_group=♻️ 美国自动`url-test`(美国|US|United States)`http:/
 custom_proxy_group=🌐 其他地区`select`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|日本|JP|Japan|新加坡|坡|SG|Singapore|美国|US|United States|台湾|台|TW|Taiwan)).*)
 custom_proxy_group=📲 电报`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
 custom_proxy_group=📚 多邻国`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🚀 节点选择
+custom_proxy_group=🏫 国外学术`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🚀 节点选择
 custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
 custom_proxy_group=🎥 奈飞`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
