--- a/ACL4SSR_Online_Full_2.ini
+++ b/ACL4SSR_Online_Full_2.ini
@@ -7,20 +7,24 @@ ruleset=🤖 AI,https://raw.githubusercontent.com/Rynderack/My-OpenCalsh-rules/r
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-ruleset=📧 邮件,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Mail/Mail.yaml
+ruleset=📧 国外邮件,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Mail/Mail.yaml
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=Ⓜ️ 微软Bing,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
 ruleset=🐬 OneDrive,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
-ruleset=Ⓜ️ 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+ruleset=🪟 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🍎 苹果,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+ruleset=🍀 谷歌,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/google.list
 ruleset=📲 电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=📚 多邻国,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/duolingo.list
 ruleset=🏦 PayPal,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PayPal/PayPal.yaml
+ruleset=🏫 国外学术,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalScholar/GlobalScholar.yaml
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
+ruleset=🎮 游戏平台,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Xbox/Xbox.yaml
 ruleset=📹 YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎥 奈飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=🎵 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
@@ -39,42 +43,40 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
 custom_proxy_group=🇭🇰 香港节点`select`(香港|港|HK|hk|Hong Kong|HongKong|hongkong)
 custom_proxy_group=🇹🇼 台湾节点`select`(台湾|台|TW|Taiwan)
 custom_proxy_group=🇯🇵 日本节点`select`(日本|JP|Japan)
 custom_proxy_group=🇸🇬 新加坡节点`select`(新加坡|坡|SG|Singapore)
 custom_proxy_group=🇺🇲 美国节点`select`(美国|US|United States)
-custom_proxy_group=🌐 其他地区`select`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|日本|JP|Japan|新加坡|坡|SG|Singapore|美国|US|United States|台湾|台|TW|Taiwan)).*)
-custom_proxy_group=📲 电报`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
-custom_proxy_group=🎥 奈飞`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
-custom_proxy_group=📺 巴哈姆特`select`[]🇹🇼 台湾节点`[]🚀 节点选择`[]🔯 台湾故转`[]♻️ 台湾自动`[]🎯 全球直连
-custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
-custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🌐 其他地区
-custom_proxy_group=📧 邮件`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🌐 其他地区
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
-custom_proxy_group=🏦 PayPal`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动
-custom_proxy_group=Ⓜ️ 微软Bing`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动
-custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
-custom_proxy_group=Ⓜ️ 微软`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动
-custom_proxy_group=🍎 苹果`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动
-custom_proxy_group=🎵 TikTok`select`[]🇯🇵 日本节点`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
-custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
-custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 新加坡故转`[]🔯 美国故转`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
-custom_proxy_group=🔯 香港故转`fallback`(香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🔯 台湾故转`fallback`(台湾|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🔯 日本故转`fallback`(日本|JP|Japan)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🔯 新加坡故转`fallback`(新加坡|坡|SG|Singapore)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🔯 美国故转`fallback`(美国|US|United States)`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=♻️ 香港自动`url-test`(香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=♻️ 台湾自动`url-test`(台湾|台灣|TW|Tai Wan|🇹🇼|TaiWan|Taiwan)`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=♻️ 日本自动`url-test`(日本|🇯🇵|Japan)`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=♻️ 新加坡自动`url-test`(新加坡|SG|坡|🇸🇬|Singapore)`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=♻️ 美国自动`url-test`(美国|US|United States)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=🌐 其他地区`select`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|日本|JP|Japan|新加坡|坡|SG|Singapore|美国|US|United States|台湾|台|TW|Taiwan)).*)
+custom_proxy_group=📲 电报`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
+custom_proxy_group=📚 多邻国`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🚀 节点选择
+custom_proxy_group=🏫 国外学术`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🚀 节点选择
+custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
+custom_proxy_group=🎥 奈飞`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
+custom_proxy_group=📺 巴哈姆特`select`[]🇹🇼 台湾节点`[]🚀 节点选择`[]♻️ 台湾自动`[]🎯 全球直连
+custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
+custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🌐 其他地区
+custom_proxy_group=📧 国外邮件`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🌐 其他地区
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
+custom_proxy_group=🏦 PayPal`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动
+custom_proxy_group=Ⓜ️ 微软Bing`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动
+custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
+custom_proxy_group=🪟 微软`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动
+custom_proxy_group=🍎 苹果`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动
+custom_proxy_group=🍀 谷歌`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
+custom_proxy_group=🎵 TikTok`select`[]🇯🇵 日本节点`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
+custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
+custom_proxy_group=🎯 全球直连`select`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
 ;设置分组标志位
 
 enable_rule_generator=true
