--- a/ACL4SSR_Online_Full_2.ini
+++ b/ACL4SSR_Online_Full_2.ini
@@ -1,14 +1,13 @@
 [custom]
 ;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Rynderack/My-OpenCalsh-rules/refs/heads/main/rules/Direct.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/Rynderack/My-OpenCalsh-rules/refs/heads/main/ProxyLite.list
-ruleset=🤖 AI,https://raw.githubusercontent.com/Rynderack/My-OpenCalsh-rules/refs/heads/main/AI.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/Rynderack/My-OpenCalsh-rules/refs/heads/main/rules/ProxySite.list
+ruleset=🤖 AI,https://raw.githubusercontent.com/Rynderack/My-OpenCalsh-rules/refs/heads/main/rules/AI.list
 
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=📧 国外邮件,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Mail/Mail.yaml
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=Ⓜ️ 微软Bing,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
 ruleset=🐬 OneDrive,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
@@ -19,20 +18,12 @@ ruleset=📲 电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=📚 多邻国,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/duolingo.list
 ruleset=🏦 PayPal,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PayPal/PayPal.yaml
 ruleset=🏫 国外学术,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalScholar/GlobalScholar.yaml
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
 ruleset=🎮 游戏平台,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Xbox/Xbox.yaml
 ruleset=📹 YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎥 奈飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=🎵 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
-ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
-ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
-ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
@@ -62,9 +53,6 @@ custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
 custom_proxy_group=🎥 奈飞`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
 custom_proxy_group=📺 巴哈姆特`select`[]🇹🇼 台湾节点`[]🚀 节点选择`[]♻️ 台湾自动`[]🎯 全球直连
-custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
-custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🌐 其他地区
 custom_proxy_group=📧 国外邮件`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🌐 其他地区
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
 custom_proxy_group=🏦 PayPal`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动
@@ -75,7 +63,7 @@ custom_proxy_group=🍎 苹果`select`[]🎯 全球直连`[]🚀 节点选择`[]
 custom_proxy_group=🍀 谷歌`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
 custom_proxy_group=🎵 TikTok`select`[]🇯🇵 日本节点`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
-custom_proxy_group=🎯 全球直连`select`[]DIRECT
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 全球直连
 ;设置分组标志位
 
